# ecommerce-backend

./: .gitignore  Dockerfile  Makefile  Procfile  README.md  db.sqlite3  development.dockerfile  docker-compose.yml  gunicorn.conf.py  manage.py  production.dockerfile  pyproject.toml  requirements.txt  update_requirements.sh
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/api/: serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
api/: urls.py
backend/src/: Procfile  requirements.txt
cart/: admin.py  cart.py  models.py  urls.py  views.py
cart/migrations/: 0001_initial.py
ecommerce/: settings.py  urls.py  views.py  wsgi.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  backend_url.js  index.js  localStorage.js  store.js
newsletter/: admin.py  apps.py  models.py  views.py
newsletter/api/: permissions.py  serializers.py  tests.py  urls.py  views.py
newsletter/migrations/: 0001_initial.py
orders/api/: permissions.py  serializers.py
payments/: urls.py  views.py
penv/: pyvenv.cfg
products/: admin.py  forms.py  models.py  urls.py  views.py
products/api/: serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_auto_20181215_1513.py  0003_auto_20181218_2039.py
requirements/: base.txt  development.txt  production.txt
src/: settings.py  storage_backends.py  urls.py  wsgi.py
src/newsletter/: apps.py
src/orders/: models.py
templates/: base.html  payments_index.html
tests/: test_newsletter.py  test_products.py
utilities/: mixins.py
(+154 files in other folders)
